--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
         "@types/react-dom": "^16.9.0",
         "axios": "^0.19.2",
         "history": "^4.10.1",
+        "i18next": "^19.4.5",
+        "i18next-browser-languagedetector": "^4.2.0",
+        "i18next-http-backend": "^1.0.15",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-i18next": "^11.5.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "react-toastify": "^6.0.5",
@@ -46,7 +50,6 @@
         "@typescript-eslint/eslint-plugin": "^3.1.0",
         "@typescript-eslint/parser": "^3.1.0",
         "cross-env": "^7.0.2",
-        "eslint": "^7.2.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-alias": "^1.1.2",
@@ -57,6 +60,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^2.5.0",
-        "prettier": "^2.0.5"
+        "prettier": "^2.0.5",
+        "react-app-rewired": "^2.1.6"
     }
 }
