--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,51 +1,27 @@
 {
-    "compilerOptions": {
-        "baseUrl": "./",
-        "paths": {
-            "@public": ["./public"],
-            "@public/*": ["./public/*"],
-
-            "@app": ["./src"],
-            "@app/*": ["./src/*"],
-
-            "@components": ["./src/components"],
-            "@components/*": ["./src/components/*"],
-
-            "@containers": ["./src/containers"],
-            "@containers/*": ["./src/containers/*"],
-
-            "@helpers": ["./src/helpers"],
-            "@helpers/*": ["./src/helpers/*"],
-
-            "@images": ["./src/images"],
-            "@images/*": ["./src/images/*"],
-
-            "@pages": ["./src/pages"],
-            "@pages/*": ["./src/pages/*"],
-
-            "@routes": ["./src/routes"],
-            "@routes/*": ["./src/routes/*"],
-
-            "@services": ["./src/services"],
-            "@services/*": ["./src/services/*"],
-
-            "@styles": ["./src/styles"],
-            "@styles/*": ["./src/styles/*"]
-        },
-        "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "allowJs": true,
-        "skipLibCheck": true,
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "forceConsistentCasingInFileNames": true,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react"
-    },
-    "include": ["src"]
+  "extends": "./tsconfig.edited.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react"
+  },
+  "include": [
+    "src"
+  ]
 }
